--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "zcj.png"
+  name             : "Chengjie Zhang"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Shenzhen, China"
+  employer         : "Southern University of Science and Technology (SUSTech)​"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "12332644@mail.sustech.edu.cn" 
 
   # Academic websites
   academia         : # URL
