--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description              : &description "An ESFP Robotic Researcher"   # Update 
 url                      : https://zcj808.github.io/ChengjieZhang.github.io/ # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://zcj808.github.io/ChengjieZhang.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
