--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "zcj.png"
   name             : "Chengjie Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "An ESFP Robotic Researcher"
   location         : "Shenzhen, China"
   employer         : "SUSTech​"
   uri              : # URL
